--- a/src/common/Common.module.css
+++ b/src/common/Common.module.css
@@ -131,6 +131,14 @@
   cursor: not-allowed;
 }
 
+.checkboxRow {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 13px;
+  color: #1b1f2a;
+}
+
 .pageLayout {
   display: grid;
   grid-template-columns: minmax(140px, 180px) 1fr;
